--- a/deployment/VL.QRCode.nuspec
+++ b/deployment/VL.QRCode.nuspec
@@ -2,16 +2,19 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>VL.QRCode</id>
-    <version>0.0.2-alpha</version>
+    <version>0.0.3-alpha</version>
     <title>VL.QRCode</title>
     <authors>vvvv, zxing</authors>
     <owners>vvvv</owners>
     <projectUrl>https://github.com/vvvv/VL.QRCode</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <summary>QRCode encoder for VL</summary>
-    <description>QRCode encoder for VL</description>
+    <summary>QRCode encoder and decoder for VL</summary>
+    <description>QRCode encoder and decoder for VL</description>
     <tags>VL, zxing</tags>
 	<license type="expression">Apache-2.0</license>
+	<dependencies>
+		<dependency id="ZXing.Net" version="0.16.4" />
+    </dependencies>
 	<icon>icon\nugeticon.png</icon>
   </metadata>
   <files>
