--- a/deployment/VL.QRCode.nuspec
+++ b/deployment/VL.QRCode.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>VL.QRCode</id>
-    <version>0.0.4-alpha</version>
+    <version>0.0.5-alpha</version>
     <title>VL.QRCode</title>
     <authors>vvvv, zxing</authors>
     <owners>vvvv</owners>
@@ -19,6 +19,8 @@
   </metadata>
   <files>
     <file src="..\*.vl" target="" exclude="" />
+    <file src="..\vvvv\**" target="vvvv\" exclude="" />
+	<file src="..\help\**" target="help\" exclude="" />
 	<file src="nugeticon.png" target="icon\" />
   </files>
 </package>
