--- a/deployment/VL.QRCode.nuspec
+++ b/deployment/VL.QRCode.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>VL.QRCode</id>
-    <version>0.0.6-alpha</version>
+    <version>0.1.0-alpha</version>
     <title>VL.QRCode</title>
     <authors>vvvv</authors>
     <owners>vvvv</owners>
@@ -13,14 +13,16 @@
     <tags>VL, zxing, barcode, qrcode</tags>
 	<license type="expression">Apache-2.0</license>
 	<dependencies>
-		<dependency id="ZXing.Net" version="0.16.8" />
+		<dependency id="ZXing.Net.Bindings.Windows.Compatibility" version="0.16.12" />
     </dependencies>
 	<icon>icon\nugeticon.png</icon>
+	<readme>docs\README.md</readme>
   </metadata>
   <files>
     <file src="..\*.vl" target="" exclude="" />
     <file src="..\vvvv\**" target="vvvv\" exclude="" />
 	<file src="..\help\**" target="help\" exclude="" />
 	<file src="nugeticon.png" target="icon\" />
+	<file src="..\README.md" target="docs\" />
   </files>
 </package>
